<resources>
    <string name="app_name">Projeto Firebase</string>
    <string name="titulo_form_cadastro">Cadastre-se</string>
    <string name="titulo_form_login">Login do Usuário</string>
    <string name="hint_email">Email</string>
    <string name="hint_senha">Senha</string>
    <string name="texto_botao_cadastrar">CADASTRAR</string>
    <string name="texto_botao_logar">LOGAR</string>
    <string name="texto_botao_logoff">LOGOFF</string>
    <string name="texto_botao_salvar">SALVAR</string>
    <string name="texto_botao_editar">EDITAR</string>
    <string name="texto_botao_deletar">DELETAR</string>
    <string name="texto_botao_ler">LER</string>
    <string name="msg_campo_vazio">Preencha todos os campos!</string>
    <string name="msg_cadastro_sucesso">Cadastro realizado com sucesso!</string>
    <string name="msg_erro_senha">Erro! Senha com menos de 6 caracteres.</string>
    <string name="msg_erro_email">Erro! E-mail inválido.</string>
    <string name="msg_erro_usuario_cadastrado">Erro! Usuário já cadastrado.</string>
    <string name="msg_erro_conexao">Erro! Verifique sua conexão com a internet.</string>
    <string name="msg_erro_cadastro">Erro ao cadastrar usuário</string>
    <string name="msg_erro_nao_cadastrado">Erro! Usuário e/ou senha inválido(s)</string>
    <string name="msg_erro_login">Erro ao logar usuário</string>
    <string name="texto_nao_tem_cadastro">Não tem Cadastro? Clique aqui!</string>
    <string name="texto_voltar_login">Já é cadastrado? Clique aqui!</string>
    <string name="txt_resultado">Resutados:</string>
</resources>
